Edit agreement API CALL and html page

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -179,6 +179,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\_AgreementsList.cshtml" />
+    <Content Include="Views\Home\EditAgreement.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
