--- a/RateEvaluator/Web.config
+++ b/RateEvaluator/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="RatesDatabaseContext" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=RatesDatabaseContext; Integrated Security=True; MultipleActiveResultSets=True; User Instance=True; AttachDbFilename=|DataDirectory|RatesDatabaseContext.mdf" providerName="System.Data.SqlClient" />
+    <add name="RatesDatabaseContext" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=RatesDatabaseContext; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|RatesDatabaseContext.mdf" providerName="System.Data.SqlClient" />
+    <add name="RatesDatabaseContext2" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=RatesDatabaseContext; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|RatesDatabaseContext.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
