added test data; added few test;

--- a/RateEvaluator.Tests/RateEvaluator.Tests.csproj
+++ b/RateEvaluator.Tests/RateEvaluator.Tests.csproj
@@ -73,6 +73,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="TestAgreementDbSet.cs" />
+    <Compile Include="TestData.cs" />
     <Compile Include="TestDbSet.cs" />
     <Compile Include="TestRatesController.cs" />
     <Compile Include="TestRatesDatabaseContext.cs" />
